<resources>
    <string name="app_name">Midterm 07600650</string>
    <string name="login_to_facebook">Login To Facebook</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">login</string>
    <string name="add_to_story">Add to Story</string>
    <string name="view_as">View As</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="more">More</string>
    <string name="goes_to">Goes to</string>
    <string name="live_in">Live in</string>
    <string name="from">From</string>
    <string name="user_name" translatable="false">Promlert Lovichit</string>
    <string name="school" translatable="false">สวนกุหลาบวิทยาลัย</string>
    <string name="resident" translatable="false">กรุงเทพมหานคร</string>
    <string name="from_where" translatable="false">กรุงเทพมหานคร</string>

    <string name="user_name_s" translatable="false">Suphachai Sriwised</string>
    <string name="school_s" translatable="false">ดรุณาราชบุรี</string>
    <string name="resident_s" translatable="false">ราชบุรี</string>
    <string name="from_where_s" translatable="false">ราชบุรี</string>

    <string name="toast_welcome">Welcome</string>

    <string name="invalid">Invalid username or password</string>
</resources>
